# Browser

./: .gitignore  .gitmodules  AGENTS.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Integration Plan  LICENSE  Makefile  PLAN.md  PLAN1.1.md  README.md  REVIEW.md  STATUS.md  STRAWBERRY.md  STRAWBERRY_SWIFT.md  SUPPORT.md  VALIDATE.md  docker-compose.yml  output.md  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  resume.md  roadmap.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.xhusky/: pre-commit
apps/afm-marketplace/: package.json
apps/afm-marketplace/scripts/: build.mjs  dev-server.mjs  lint.mjs
apps/afm-marketplace/src/: main.mjs  main.test.mjs
archive/: README.md
archive/deprecated-documents/: CHANGE.md  CHECKLIST.md  CHECKPOINT.md  PLAN.md  STRAWBERRY.md  TODO.md  VALIDATE.md  resume.md  walkthrough.md
configs/: agent_apps.json
configs/examples/: .env.afm-node.example  .env.browser.example  .env.registry.example  .env.router.example  .env.swift.example  .env.zkvm.example
configs/mcp_profiles/: default.json  profiles.json
configs/mcp_profiles_bak_1764598441110/: default.json  profiles.json
crates/afm-node/: Cargo.toml
crates/afm-node/src/: lib.rs
crates/afm-zkvm/: Cargo.toml
crates/afm-zkvm/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: approvals.rs  capabilities.rs  dom.rs  ledger.rs  lib.rs  runtime.rs
crates/ai-agent/: Cargo.toml  build.rs
crates/ai-agent/src/: foundation.rs  language_model.rs  lib.rs  mcp.rs  orchestrator.rs
crates/ai-agent/src/foundation/: foundation_macos.rs
crates/ai-agent/src/macos/: foundation_bridge.swift
crates/blockchain/: Cargo.toml  README.md
crates/blockchain/src/: client.rs  lib.rs  sync.rs  transaction.rs  wallet.rs
crates/blockchain/tests/: integration_tests.rs  test_utils.rs
crates/btc-light/: Cargo.toml
crates/btc-light/src/: main.rs
crates/eth-light/: Cargo.toml
crates/eth-light/src/: main.rs
crates/gui/: .eslintrc.cjs  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
crates/gui/capabilities/: main.json
crates/gui/configs/mcp_profiles/: profiles.json
crates/gui/icons/: icon.icns
crates/gui/permissions/: main-ui.toml
crates/gui/src/: afm.rs  agent_app_schedules.rs  agent_apps.rs  app_state.rs  browser_engine.rs  commands.rs  index.html  lib.rs  main.rs  main.ts  mcp_profiles.rs  performance.rs  protocol_handlers.rs  security.rs  tauri.d.ts  telemetry.rs  telemetry_commands.rs  types.ts  utils.ts  wallet_store.rs  wallet_ui.rs  webview_automation.rs
crates/gui/src/agent/: approvals.rs  credits.rs  iproov.rs  manager.rs  mcp_client.rs  mod.rs  skills.rs  tools.rs
crates/gui/src/css/: bookmarks-panel.css  bookmarks.css  browser.css  context-menu.css  downloads-panel.css  history-panel.css
crates/gui/src/features/bookmarks/: BookmarkManager.ts  index.ts
crates/gui/src/js/: bookmarks-bar.js  bookmarks-panel.js  downloads-panel.js  history-manager.js  history-manager.test.js  history-panel.js  navigation-manager.js  tab-group.js  tab-manager.js  tab.js  ui-manager.js  utils.js  utils.test.js
crates/gui/src/test-pages/: history-test.html
crates/gui/tests/: history.test.js  integration_tests.rs  navigation-ui.spec.js
crates/ipfs/: BITSWAP.md  Cargo.toml
crates/ipfs/benches/: bench.rs
crates/ipfs/examples/: bitswap_exchange.rs
crates/ipfs/src/: bitswap.rs  blockstore.rs  dht.rs  dht_api.rs  ipfs_node.rs  lib.rs  main.rs  node.rs  node_behaviour.rs  node_impl.rs  node_modern.rs  node_new.rs
crates/ipfs/src/bitswap/: circuit_breaker.rs
crates/ipfs/src/bitswap/tests/: circuit_breaker_tests.rs
crates/ipfs/src/ipfs/: block.rs  config.rs  error.rs  mod.rs  node.rs  node_modern.rs  repo.rs
crates/ipfs/tests/: bitswap_tests.rs  circuit_breaker_integration.rs  circuit_breaker_tests.rs  dht_tests.rs  modern_node_tests.rs  standalone_circuit_breaker.rs
crates/libp2p-core/: Cargo.toml
crates/libp2p-core-vendor/: Cargo.toml
crates/libp2p-core-vendor/src/: lib.rs
crates/libp2p-core/src/: lib.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  lib.rs  main.rs  transport.rs
crates/updater/: Cargo.toml
crates/updater/src/: error.rs  fetcher.rs  lib.rs  manifest.rs  updater.rs
crates/walletd/: Cargo.toml
crates/walletd/src/: main.rs
docs/: AFM_BROWSER_INTEGRATION.md  AGENT_APPS.md  AGENT_INTEGRATION_CHECKLIST.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  KEYMEIN.md  LIGHT_CLIENTS.md  NATIVE_PROTOCOL_ENGINE_BUNDLING_PLAN.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  review-remediation-2026-05-11.md  static-review-hardening.md
docs/ai/: dev_commands.yaml  system_map.yaml
scripts/: build-installers.sh  build.sh  create-dmg.sh  dev-start.sh  dev-stop.sh  devnet-start.sh  devnet-stop.sh  package-macos-dmg.sh
services/chain-trust/: package.json
services/chain-trust/src/: server.mjs
services/llm-router/: Cargo.toml
services/llm-router/src/: lib.rs
services/node/: package.json
services/node/src/: server.mjs
services/pipelines/: package.json
services/pipelines/src/: worker.mjs
services/registry/: package.json
services/registry/src/: server.mjs
services/router/: package.json
services/router/src/: server.mjs
services/storage-adapters/: package.json
services/storage-adapters/src/: handlers.mjs  handlers.test.mjs  server.mjs
skills/: manifest.json
src/: main.rs
swift/BLSVerifierKit/: Package.swift
swift/dBrowser/dBrowser/: A2UITokenRenderer.swift  AFMExpertTraining.swift  AFMServicesClient.swift  AgenticPayments.swift  AppIntents.swift  AvalancheLightClient.swift  BitcoinLightClient.swift  BlockchainCapabilityContracts.swift  BrowserHistoryService.swift  BrowserModels.swift  BrowserViewModel.swift  BrowserWebView.swift  BundledLLM.swift  ChainTrustRegistry.swift  Item.swift  (+23 more)
swift/dBrowser/dBrowser.xcodeproj/: project.pbxproj
(+19 files in other folders)
