[package]
name = "afm-node"
version = "0.1.0"
edition = "2021"
publish = false
description = "Browser-managed controller for the AFM node runtime"
license = "Apache-2.0"

[dependencies]
agent-core = { path = "../agent-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
