[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent = { path = "../ai-agent" }
anyhow = { workspace = true }
async-trait = { workspace = true }
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
