[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"

[features]
default = ["foundation-model"]
# Allow disabling the macOS foundation model bridge for non-Apple builds.
foundation-model = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
once_cell = "1.19"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
cfg-if = "1.0"
indexmap = { version = "2.6", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
cfg-if = "1.0"

