[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"
description = "Blockchain integration for the Browser project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/browser"

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]

[dependencies]
# Polkadot SDK - using stable release
frame-support = { version = "37.0.0", default-features = false }
frame-system = { version = "37.0.0", default-features = false }
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = { version = "24.0.0", default-features = false }
sp-std = { version = "8.0.0", default-features = false }
sp-io = { version = "23.0.0", default-features = false }

# Crypto and serialization
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Async and networking
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
log = "0.4"
thiserror = "1.0"

# Web3 and Ethereum compatibility (optional)
web3 = { version = "0.18", optional = true, features = ["signing"] }

[dev-dependencies]
sp-core = { version = "21.0.0", default-features = false }
sp-io = { version = "23.0.0", default-features = false }
sp-keyring = { version = "24.0.0" }
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
hex = "0.4"
# Modern subxt for Substrate interaction
subxt = { version = "0.35", features = ["substrate-compat"] }
subxt-signer = "0.35"
