[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"
description = "Blockchain integration for the Browser project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/advatar/browser"

[features]
default = ["std", "wallet"]
std = [
    "parity-scale-codec/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
wallet = []
substrate = [
    "dep:frame-support",
    "dep:frame-system",
    "frame-support/std",
    "frame-system/std",
]

[dependencies]
# Polkadot SDK - using stable release
frame-support = { version = "37.1.0", default-features = false, optional = true }
frame-system = { version = "37.1.0", default-features = false, optional = true }
sp-core = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "38.0.2", default-features = false }
anyhow = { workspace = true }

# Crypto and serialization
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Async and networking
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
log = "0.4"
thiserror = "1.0"

# Web3 and Ethereum compatibility (optional)
web3 = { version = "0.18", optional = true, features = ["signing"] }

[dev-dependencies]
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.2", default-features = false }
sp-keyring = { version = "39.0.0" }
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
hex = "0.4"
# Modern subxt for Substrate interaction
subxt = "0.44"
subxt-signer = "0.44"
