[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tauri = { version = "2.6.2", features = ["shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.0.0-beta.2" }

[package.metadata.bundle]
identifier = "com.decentralized.browser"
icon = ["icons/icon.icns"]
