[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tauri = { version = "2.7.0", features = [] }
tauri-plugin-dialog = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bs58 = { version = "0.5.0" }
hex = "0.4.3"
url = { version = "2.5.0" }
log = { workspace = true }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
base64 = "0.21.7"
urlencoding = "2.1.3"
sha3 = "0.10.8"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.7", features = [] }

[package.metadata.bundle]
identifier = "com.decentralized.browser"
icon = ["icons/icon.icns"]
