[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[features]
default = []
test = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tauri = { version = "2.7.0", features = [] }
tauri-plugin-dialog = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = { workspace = true }
bs58 = { version = "0.5.0" }
hex = "0.4.3"
url = { version = "2.5.0" }
log = { workspace = true }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
ethers-core = { version = "2.0.14" }
ethers-providers = { version = "2.0.14", default-features = true }
ethers-signers = { version = "2.0.14" }
base64 = "0.21.7"
urlencoding = "2.1.3"
sha3 = "0.10.8"
sysinfo = "0.29"
afm-node = { path = "../afm-node" }
blockchain = { path = "../blockchain" }
ai-agent = { path = "../ai-agent" }
agent-core = { path = "../agent-core" }
llm-router = { path = "../../services/llm-router" }
k256 = { version = "0.13", default-features = true, features = ["ecdsa"] }
rand = "0.8"
jsonwebtoken = { version = "9.3", default-features = false, features = ["use_pem"] }
p256 = { version = "0.13", features = ["pkcs8"] }
sha2 = "0.10"
cid = "0.10"
ed25519-dalek = { workspace = true }
updater = { path = "../updater" }
indexmap = "2.7.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
keyring = "2.3"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.7", features = [] }

[package.metadata.bundle]
identifier = "com.decentralized.browser"
icon = ["icons/icon.icns"]
