[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"
description = "IPFS implementation for the decentralized browser"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ipfs-rs"
keywords = ["ipfs", "libp2p", "p2p", "decentralized"]
categories = ["network-programming", "cryptography", "filesystem"]

[features]
# Enable metrics collection
metrics = ["libp2p/metrics"]
# Enable WebRTC transport (experimental)
webrtc = []  # Removed until we have a working implementation
# Enable WebTransport (experimental)
webtransport = []  # Removed until we have a working implementation

[lib]
# Set the library target name
name = "ipfs"
path = "src/lib.rs"

[[bin]]
# Set the binary target name
name = "ipfs-node"
path = "src/bin/node.rs"

[dependencies]
# Core dependencies
async-trait = { workspace = true }
bytes = { workspace = true }
cid = { version = "0.11.1", features = ["std"] }
dirs = "5.0.1"
futures = { workspace = true }
libipld = { version = "0.14.0", features = ["dag-cbor", "dag-json", "dag-pb"] }
libp2p = { workspace = true }
libp2p-core = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-swarm = { workspace = true }
libp2p-identify = { workspace = true }
libp2p-kad = { workspace = true }
libp2p-mdns = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-yamux = { workspace = true }
libp2p-dns = { workspace = true }
libp2p-tcp = { workspace = true }
libp2p-ping = { workspace = true }
libp2p-relay = { workspace = true }
libp2p-autonat = { workspace = true }
libp2p-upnp = { workspace = true }
libp2p-metrics = { workspace = true }
libp2p-quic = { workspace = true }
libp2p-websocket = { workspace = true }
log = { workspace = true }
multihash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
tokio = { version = "1.30.0", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
tokio-util = { version = "0.7.8", features = ["codec", "io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-ipfs = "0.3.0"

[dev-dependencies]
tempfile = "3.5.0"

# Benchmarks
[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

# Ensure consistent versions for multiaddr and multihash in tests
[dev-dependencies.multiaddr]
version = "0.16.0"
default-features = false

[dev-dependencies.multihash]
version = "0.19.3"
default-features = false
features = ["std"]
