[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "P2P networking module for the browser"
license = "MIT"
repository = ""

[[bin]]
name = "p2p-node"
path = "src/bin/main.rs"

[features]
default = ["kad", "mdns"]
kad = ["dep:libp2p-kad"]
mdns = ["dep:libp2p-mdns"]
floodsub = ["dep:libp2p-floodsub"]
gossipsub = ["dep:libp2p-gossipsub"]

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "io-util", "net", "sync"] }
futures.workspace = true
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and debugging
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, optional = true }
log = "0.4"

# Core libp2p dependencies - using workspace versions
libp2p = { workspace = true, default-features = false, features = [
    "tcp",
    "tls",
    "dns",
    "yamux",
    "noise",
    "ping",
    "identify",
    "kad",
    "mdns",
    "floodsub",
    "gossipsub"
]}
libp2p-core.workspace = true
libp2p-identity.workspace = true
libp2p-swarm.workspace = true
libp2p-identify = { workspace = true, optional = true }
libp2p-ping.workspace = true
libp2p-tcp = { workspace = true, default-features = false, features = ["async-io"] }
libp2p-yamux.workspace = true
libp2p-noise.workspace = true

# Optional libp2p features - using workspace versions
libp2p-kad = { workspace = true, optional = true }
libp2p-mdns = { workspace = true, optional = true }
libp2p-floodsub = { workspace = true, optional = true }
libp2p-gossipsub = { workspace = true, optional = true }
libp2p-websocket = { workspace = true, optional = true }

# Explicit dependencies for the problematic crates with compatible versions
# These are included in the workspace dependencies

# Utilities
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4.0", features = ["derive"], optional = true }
bytes = "1.5"
void = "1.0"
fastrand = "2.0.0"

[dev-dependencies]
tempfile = "3.10.0"
tokio-test = "0.4.3"
env_logger = "0.10.1"

# No need for patch section - using workspace dependencies
