[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "P2P networking module for the browser"
license = "MIT"
repository = ""

[[bin]]
name = "p2p-node"
path = "src/bin/main.rs"

[features]
default = []

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "io-util", "net", "sync"] }
futures.workspace = true
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and debugging
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, optional = true }
log = "0.4"

# Core libp2p dependencies - using workspace versions
libp2p = { workspace = true, default-features = false, features = [
    "tcp",
    "tls",
    "dns",
    "yamux",
    "noise",
    "ping",
    "identify",
    "kad",
    "mdns",
    "floodsub",
    "gossipsub"
]}
libp2p-core.workspace = true
libp2p-swarm.workspace = true
libp2p-identify.workspace = true
libp2p-ping.workspace = true
libp2p-kad.workspace = true
libp2p-mdns.workspace = true
libp2p-floodsub.workspace = true
libp2p-gossipsub.workspace = true
libp2p-tcp.workspace = true
libp2p-yamux.workspace = true
libp2p-noise.workspace = true
libp2p-dns.workspace = true
libp2p-identity.workspace = true

# Utilities
bytes.workspace = true
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
clap = { version = "4.0", features = ["derive"], optional = true }
void = "1.0"
fastrand = "2.0.0"

# Development and testing
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.3"
env_logger = "0.11"

# No need for patch section - using workspace dependencies
